--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 
     <properties>
         <vaadin.version>10.0.0</vaadin.version>
-
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +29,13 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+	
+	<scm>
+        <url>https://github.com/FlowingCode/AppLayoutAddon</url>
+        <connection>scm:git:git://github.com/FlowingCode/AppLayoutAddon.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:/FlowingCode/AppLayoutAddon.git</developerConnection>
+        <tag>App Layout add-on for Vaadin</tag>
+    </scm>
 	
     <dependencyManagement>
         <dependencies>
