--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
 		    <artifactId>paper-button</artifactId>
 		    <version>2.1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.webjars.bowergithub.jifalops</groupId>
+		    <artifactId>iron-collapse-button</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
     </dependencies>
 
     <build>
