Add resourceBases configuration

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
                     <!-- Use test scope because the UI/demo classes are in
                             the test package. -->
                     <useTestScope>true</useTestScope>
+                    <webAppConfig>
+                        <resourceBases>
+	                        <resourceBase>src/test/resources/META-INF/resources</resourceBase>
+	                        <resourceBase>src/main/resources/META-INF/resources</resourceBase>
+	                    </resourceBases>
+                    </webAppConfig>
                     <supportedPackagings>
                         <supportedPackaging>jar</supportedPackaging>
                     </supportedPackagings>
