--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
 		    <version>1.3</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
     </dependencies>
 
     <build>
