--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,20 @@
             <id>Vaadin Directory</id>
             <url>https://maven.vaadin.com/vaadin-addons</url>
         </repository>
+        <repository>
+			<id>FlowingCode Releases</id>
+			<url>https://maven.flowingcode.com/releases</url>
+		</repository>
+		<repository>
+			<id>FlowingCode Snapshots</id>
+			<url>https://maven.flowingcode.com/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
     </repositories>
 
     <dependencies>
