--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,7 @@
                             <execution>
                             <id>copy-resources</id>
                             <!-- here the phase you need -->
-                            <phase>validate</phase>
+                            <phase>prepare-package</phase>
                             <goals>
                                 <goal>copy-resources</goal>
                             </goals>
