--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 						<useSystemClassLoader>false</useSystemClassLoader>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.12.1</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		
