--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <vaadin.version>24.1.2</vaadin.version>
-        <hilla.version>1.2.10</hilla.version>
+        <hilla.version>2.1.2</hilla.version>
 
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -50,13 +50,6 @@
                 <scope>import</scope>
                 <version>${vaadin.version}</version>
             </dependency>
-            <dependency>
-                <groupId>dev.hilla</groupId>
-                <artifactId>hilla-bom</artifactId>
-                <version>${hilla.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -86,11 +79,12 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>dev.hilla</groupId>
-            <artifactId>hilla</artifactId>
-            <optional>true</optional>
-        </dependency>
+		<dependency>
+		    <groupId>dev.hilla</groupId>
+		    <artifactId>endpoint</artifactId>
+		    <version>2.1.2</version>
+		    <optional>true</optional>
+		</dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
