--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-core</artifactId>
+            <optional>true</optional>
         </dependency>
 		<dependency>
 		    <groupId>dev.hilla</groupId>
