--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-core</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>dev.hilla</groupId>
