--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <description>Integration of app-layout for Vaadin Flow</description>
 
     <properties>
-        <vaadin.version>24.1.2</vaadin.version>
-        <hilla.version>2.1.2</hilla.version>
+        <vaadin.version>24.3.8</vaadin.version>
+        <hilla.version>2.5.7</hilla.version>
 
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -83,13 +83,13 @@
 		<dependency>
 		    <groupId>dev.hilla</groupId>
 		    <artifactId>endpoint</artifactId>
-		    <version>2.1.2</version>
+		    <version>${hilla.version}</version>
 		    <optional>true</optional>
 		</dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>3.1.0</version>
+			<version>3.2.4</version>
             <optional>true</optional>
         </dependency>
         <dependency>
