chore: add developers section to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,14 @@
         <tag>app-layout-addon-2.0.0</tag>
     </scm>
 	
+    <developers>
+        <developer>
+            <id>flowingcode</id>
+            <organization>Flowing Code</organization>
+            <organizationUrl>https://www.flowingcode.com</organizationUrl>
+        </developer>
+    </developers>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
