--- a/pom.xml
+++ b/pom.xml
@@ -528,5 +528,46 @@
 				</plugins>
 			</build>
 		</profile>
+		
+		<profile>
+			<id>v25</id>
+			<properties>
+				<maven.compiler.source>21</maven.compiler.source>
+				<maven.compiler.target>21</maven.compiler.target>
+				<vaadin.version>25.0.0-beta2</vaadin.version>
+				<jetty.version>11.0.26</jetty.version>
+			</properties>
+			<repositories>
+				<repository>
+					<id>vaadin-prerelease</id>
+					<url>https://maven.vaadin.com/vaadin-prereleases</url>
+				</repository>
+				<repository>
+					<id>FlowingCode Snapshots</id>
+					<url>https://maven.flowingcode.com/snapshots</url>
+					<snapshots>
+						<enabled>true</enabled>
+					</snapshots>
+					<releases>
+						<enabled>false</enabled>
+					</releases>
+				</repository>
+			</repositories>
+			<pluginRepositories>
+				<pluginRepository>
+					<id>vaadin-prerelease</id>
+					<url>https://maven.vaadin.com/vaadin-prereleases</url>
+				</pluginRepository>
+			</pluginRepositories>
+			<dependencies>
+				<dependency>
+					<groupId>com.flowingcode.vaadin.addons.demo</groupId>
+					<artifactId>commons-demo</artifactId>
+					<version>4.4.0-SNAPSHOT</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+		
     </profiles>
 </project>
