ci: add vaadin 25 build action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,16 @@ jobs:
         cache: maven
     - name: Build (Vaadin 24)
       run: mvn -B package --file pom.xml
+      
+  build-vaadin25:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build (Vaadin 25)
+      run: mvn -B package --file pom.xml -Pv25
