ci: add vaadin-dev dependency to v25 profile

--- a/pom.xml
+++ b/pom.xml
@@ -537,6 +537,13 @@
 				<vaadin.version>25.0.0-beta2</vaadin.version>
 				<jetty.version>11.0.26</jetty.version>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.vaadin</groupId>
+					<artifactId>vaadin-dev</artifactId>
+					<optional>true</optional>
+				</dependency>
+			</dependencies>
 		</profile>
 		
     </profiles>
