ci: upgrade to vaadin 25.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -534,7 +534,7 @@
 			<properties>
 				<maven.compiler.source>21</maven.compiler.source>
 				<maven.compiler.target>21</maven.compiler.target>
-				<vaadin.version>25.0.0-beta2</vaadin.version>
+				<vaadin.version>25.0.0</vaadin.version>
 				<jetty.version>11.0.26</jetty.version>
 			</properties>
 			<dependencies>
